--- a/server/server-user/src/main/resources/application.properties
+++ b/server/server-user/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port = 8082
 spring.datasource.url=jdbc:mysql://localhost:8889/todolist_celonis
 spring.datasource.username=root
 spring.datasource.password=root
